--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brewwise Coffee</title>
     <meta name="description" content="Premium coffee shop with artisan brews and cozy atmosphere">
-    <link rel="icon" type="image/png"
-      href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060075/favicon-96x96_yjq4xw.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml"
-      href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060099/favicon_g6dyft.svg" />
-    <link rel="shortcut icon" href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060075/favicon_obgxay.ico" />
-    <link rel="apple-touch-icon" sizes="180x180"
-      href="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1750060076/apple-touch-icon_rsrx62.png" />
+    <link rel="icon" type="image/svg+xml" href="/icons.png" />
   </head>
   <body>
     <div id="root"></div>
